# qwen

./: .gitignore  readme.md
libtorch_qwen_3b/: Makefile  README.md
libtorch_qwen_3b/cpp/: CMakeLists.txt
libtorch_qwen_3b/cpp/include/: qwen_attention.h  qwen_embedding.h  qwen_env.h  qwen_layernorm.h  qwen_mlp.h  qwen_model.h  qwen_model_config.h  qwen_tokenizer.h  qwen_transformer_block.h
libtorch_qwen_3b/cpp/src/diagnostics/: debug_chat.cpp  diagnose_chat.cpp  diagnose_hidden_states.cpp  diagnose_model.cpp  diagnose_second_token.cpp
libtorch_qwen_3b/cpp/src/examples/: quick_chat_test.cpp
libtorch_qwen_3b/cpp/src/tests/: final_test.cpp  quick_test.cpp  test_attention.cpp  test_embedding.cpp  test_qwen_chat.cpp  test_qwen_generate.cpp  test_qwen_model.cpp  test_qwen_simple.cpp  test_repetition.cpp  test_transformer.cpp
libtorch_qwen_3b/docs/: PROJECT_SUMMARY.md  README.md  REPETITION_PENALTY.md  STRUCTURE.md  TOKENIZER_EXPLAINED.md
libtorch_qwen_3b/scripts/: qwen_tokenize.py
libtorch_qwen_3b/tools/: check_weight_keys.py  compare_tokenizers.py  convert.py  diagnose_model.py  split_weights.py  verify_tokenizer.py
